--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,30 +4,114 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tutorialsninja.tests.Search</td>
+<td>tutorialsninja.tests.Register</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchResultingMultipleProducts</td>
+<td>verifyRegisteringAccountInDifferentEnvironments</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchWithValidProduct</td>
+<td>verifyRegisteringAccountByProvidingMismatchingPasswords</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchAfterrLogin</td>
+<td>verifyRegisteringAccountFielsHeightWidthAlignment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchWithoutEnteringAnyProduct</td>
+<td>verifyWorkingOfEveryLinkOnRegisterAccount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchWithInvaliadProduct</td>
+<td>verifyRegisteringAccountByProvidingExistingEmail</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisterWithAllFeilds</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringWithoutFillingFeilds</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountWithoutPrivacyPolicySelection</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountByProvidingEntriesUsingKeyboardActions</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPrivacyPolicyFieldsOnRegisteringAccountPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyHeadingAndTrailingSpacesWhileRegisteringPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyNavigatingToRegisterAccountPageWithMultipleWays</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyPlaceholdersOfTextFieldsInRegisterAccountPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountWithoutEnteringPasswordIntoPasswordConfirmField</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountByProvidingInvalidTelephone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyMandatoryFieldsInRegisterAccountPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountSayingNoToNewsLetter</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUIOfRegisterAccountPage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>RegisterWithMandatoryFeilds</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBreadcrumbTitleHeadingRegisterAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountByCheckingThePasswordStandards</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountUsingInvalidEmails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountByProvidingOnlySpace</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDatabaseTestingOfRegisteringAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountSayingYesToNewsLetter</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyRegisteringAccountVisibilityTogglingOfPasswordFields</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -44,7 +128,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>teardown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
